submit data and heartbeat done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ET_AuthClientExample</string>
-    <string name="account">Email: %1$s; UserId: %2$d</string>
+    <string name="account">Email: %1$s; UserId: %2$d; IsParticipant: %3$b</string>
 
     <!--gRPC-->
     <string name="grpc_server_ip">165.246.43.162</string>
@@ -8,6 +8,4 @@
 
     <!--Google login-->
     <string name="server_google_client_id">79296265957-q86codp0stg8ka489ukeplp0gem0k8na.apps.googleusercontent.com</string>
-    <string name="logout">Logout</string>
-    <string name="dummy">Dummy</string>
 </resources>
